c/examples/writing-a-c-compiler-tests/tests/chapter_7/valid/multiple_vars_same_name.c
int main(void) {
    int a = 0;
    {
        int b = 4;
        a = b;
    }
    {
        int b = 2;
        a = a - b;
    }
    return a;
}