c/examples/writing-a-c-compiler-tests/tests/chapter_7/invalid_parse/ternary_blocks.c
int main(void) {
    int a;
    return 1 ? { a = 2 } : a = 4;
}